*SVN*

* @response.redirect_url works with 201 Created responses: just return headers['Location'] rather than checking the response status.  [Jeremy Kemper]

* Added CSV to Mime::SET so that respond_to csv will work [Cody Fauser]

* Fixed that HEAD should return the proper Content-Length header (that is, actually use @body.size, not just 0) [DHH]

* Added GET-masquarading for HEAD, so request.method will return :get even for HEADs. This will help anyone relying on case request.method to automatically work with HEAD and map.resources will also allow HEADs to all GET actions. Rails automatically throws away the response content in a reply to HEAD, so you don't even need to worry about that. If you, for whatever reason, still need to distinguish between GET and HEAD in some edge case, you can use Request#head? and even Request.headers["REQUEST_METHOD"] for get the "real" answer. Closes #6694 [DHH]

* Update Routing to complain when :controller is not specified by a route. Closes #6669. [Nicholas Seckar]

* Ensure render_to_string cleans up after itself when an exception is raised.  #6658 [rsanheim]

* Extract template_changed_since? from compile_template? so plugins may override its behavior for non-file-based templates.  #6651 [Jeff Barczewski]

* Update to Prototype and script.aculo.us [5579]. [Thomas Fuchs]

* simple_format helper doesn't choke on nil.  #6644 [jerry426]

* Update to Prototype 1.5.0_rc2 [5550] which makes it work in Opera again [Thomas Fuchs]

* Reuse named route helper module between Routing reloads. Use remove_method to delete named route methods after each load. Since the module is never collected, this fixes a significant memory leak. [Nicholas Seckar]

* ActionView::Base.erb_variable accessor names the buffer variable used to render templates. Defaults to _erbout; use _buf for erubis.  [Rick Olson]

* assert_select_rjs :remove.  [Dylan Egan]

* Always clear model associations from session.  #4795 [sd@notso.net, andylien@gmail.com]
